--- a/package.json
+++ b/package.json
@@ -29,25 +29,27 @@
   },
   "homepage": "https://github.com/TeamWertarbyte/material-ui-password-field#readme",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.2.12",
-    "@storybook/react": "^3.2.12",
+    "@storybook/addon-actions": "^3.4.5",
+    "@storybook/react": "^3.4.5",
     "@wertarbyte/mui-styleguidist-wrapper": "^0.1.3",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.8.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
-    "material-ui": "^0.19.3",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "@material-ui/core": "^1.0.0",
+    "react": "^16.0.34",
+    "react-dom": "^16.2.0",
     "standard": "^10.0.2"
   },
   "peerDependencies": {
-    "material-ui": "<1.0.0",
-    "react": "^15.4.2 || ^16.0.0"
+    "@material-ui/core": "^1.0.0",
+    "react": "^16.0.34",
+    "@storybook/addons": "^3.3.0",
+    "babel-runtime": "6.0.0"
   },
   "dependencies": {
-    "material-ui-toggle-icon": "^0.2.1",
+    "material-ui-toggle-icon": "mark-monserrat/material-ui-toggle-icon",
     "prop-types": "^15.5.10"
   }
 }
